<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"星探"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">立即登录</string>
    <string name="login_fgt_pwd">忘记密码?</string>
    <string name="login_hint_username">请输入用户名</string>
    <string name="login_hint_pwd">输入6-16位密码,字母或数字或组合</string>
    <string name="main_next">下一步</string>
    <string name="register_protocol">使用真实姓名能让别人更快的找到和联系你,注册即表示同意&lt;星探用户协议></string>
    <string name="register_choose_bir">选择生日</string>
    <string name="register_bt_1">选择次角色,您可以关注喜欢的艺人和其他角色相互互动.</string>
    <string name="register_bt_2">选择此角色，您可以选择星探发布的活动或者接受粉丝的邀请。</string>
    <string name="register_bt_3">选择此角色，您可以发布活动等待艺人的参加。</string>
    <string name="register_three_1">为了保障您的用号安全，请输入常用手机号</string>
    <string name="register_three_text2">为了保障您的账号安全，请勿设置过于简易的密码，星探不会在任何地方泄露您的手机密码</string>
    <string name="register_three_code">提取验证码</string>
    <string name="register_four_hint1">设置登陆密码</string>
    <string name="register_four_hint2">再次输入密码</string>
    <string name="register_four_over">完成注册</string>
    <string name="register_three_hint2">请输入验证码</string>
    <string name="register_pwd_hint1">输入新密码</string>
    <string name="register_pwd_hint2">再次输入新密码</string>
    <string name="main_submit">提交</string>
    <string name="register_pwd_hint3">请输入您当时注册时使用的手机号</string>
    <string name="register_pwd_hint4">输入您的手机号</string>
    <string name="dynamic_text1">每一朵玫瑰都有刺，正如每个人性格里面都有你不能容忍的部分，爱护每一朵玫瑰，并不是要把每一个刺根除。</string>
    <string name="dynamic_add_hint">说点什么吧</string>
    <string name="dynamic_add_text">添加本地图片</string>
    <string name="chance_add_p">添加图片</string>
    <string name="chance_text1">填写招聘专题名称:</string>
    <string name="chance_text2">报名截止日期:</string>
    <string name="chance_text3">必填</string>
    <string name="chance_text4">选择工作地点:</string>
    <string name="chance_text5">工作介绍:</string>
    <string name="chance_hint1">介绍一下工作或者项目亮点</string>
    <string name="chance_text6">招聘职位名称:</string>
    <string name="chance_text7">工作开始时间:</string>
    <string name="chance_text8">工作结束时间:</string>
    <string name="chance_text9">立即发布</string>
    <string name="chance_hint2">编辑具体职位要求</string>
    <string name="chance_text10">活动介绍:</string>
    <string name="chance_text11">活动介绍 活动介绍 活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍活动介绍</string>
    <string name="chance_text12">活动地点:</string>
    <string name="chance_text14">迎宾美女</string>
    <string name="chance_text15">工作内容 工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容</string>
    <string name="chance_text16">和发布者私聊</string>
    
        <string name="work_price">价   格:</string>
    <string name="work_address">所在地:</string>
    <string name="work_context">工作内容:</string>
    <string name="work_payment">结算方式:</string>
    <string name="work_num">数量：</string>
    <string name="work_input">输入数值</string>
    <string name="work_data">工作日期:</string>
    <string name="work_next">立即预约</string>
    <string name="login_user_hint">请输入用户名或手机号</string>
    
    <!-- 环信 -->
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
       <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    
      <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
      <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
 <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
      <string name="exit_group">退出</string>
      <string name="connect_conflict">同一帐号已在其他设备登录</string>
          <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
</resources>
