<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_grey"
    android:orientation="vertical" >

    <include layout="@layout/main_top_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="30dp" >

                <AutoCompleteTextView
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/username_draw_xml"
                    android:drawablePadding="10dp"
                    android:ems="20"
                    android:focusable="true"
                    android:hint="@string/login_hint_username"
                    android:textColorHint="@color/color_2"
                    android:textSize="@dimen/new_size_3" >

                    <requestFocus />
                </AutoCompleteTextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/spilt_line_color" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/password_draw_xml"
                    android:drawablePadding="10dp"
                    android:ems="20"
                    android:hint="@string/login_hint_pwd"
                    android:inputType="textPassword"
                    android:textColorHint="@color/color_2"
                    android:textSize="@dimen/new_size_3" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/spilt_line_color" />

            <TextView
                android:id="@+id/tv_login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_fgt_pwd"
                android:textSize="@dimen/new_size_3" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_login_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/login_bt_color"
            android:text="@string/login"
            android:textColor="@color/white" />
    </FrameLayout>

</LinearLayout>